# learn-mcp

./: .gitignore  MCP笔记-v2.md  README.md  pyproject.toml
mcp-client/: .env  .env.example  README.md  client.py  client2.py  client2_zhipu.py  client_weather.py  pyproject.toml  server_weather.py
mcp-graphrag/: README.md  client.py  pyproject.toml  rag_server.py
mcp-graphrag/ragtest/cache/community_reporting/: chat_create_community_report_344ccb084b3174c7ed62179c80a60c92a7700948642548368947fc2971617530_v2  chat_create_community_report_45724afa9351871155ecea0941b45a150148054de44406ec20f003fcb055a630_v2  chat_create_community_report_65bc639cd81e60df4629a11784f01ea669bfee8008d993347e79780c7626266c_v2
mcp-graphrag/ragtest/cache/extract_graph/: chat_28d435482cf85478e47381e09875e358b76cfd30f2744a2b167caee3d831db33_v2  chat_614d82237e1b84e394e4825ee96a2d96e79e339974f7fb56cdee1d7b7dc1ebb8_v2  chat_7362e4c4e05f70fcd4a201d4da7b2d6ad809f22efbf29aceb4ccf1fe9dd8d6d5_v2  chat_7c9cd68b1447530612ac3255f485951798c7944db17369e7c3498edfe846378a_v2  (+4 more)
mcp-graphrag/ragtest/input/: 决策树教学.txt
mcp-graphrag/ragtest/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
mcp_client_example/: client.py
mcp_server_example/: server.py  server.ts
mcp_simple_example/: client.py  client.ts  run_server.py  server.py  server.ts
personal-kb-mcp/: README.md  pyproject.toml
personal-kb-mcp/.personal_kb/: chat_history
personal-kb-mcp/data/: knowledge_base.db
personal-kb-mcp/personal_kb/: .env.example  chat_app.py  cli.py  config.py  database.py  schema.py  server.py  utils.py  zhipu_client.py
personal-kb-mcp/personal_kb_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
personal_kb/: chat_app.py  server.py
(+21 files in other folders)
