[build-system]  
requires = ["setuptools>=61.0", "wheel"]  
build-backend = "setuptools.build_meta"  

[project]  
name = "personal-kb-mcp"  
version = "0.1.0"  
description = "A personal knowledge base with MCP integration for Zhipu AI"  
authors = [  
    {name = "NJUxlj", email = "Zhongyang.Hu23@alumini.xjtlu.edu.cn"},  
]  
dependencies = [  
    "pydantic>=2.5.0",  
    "mcp>=0.1.0",  
    "fastmcp>=0.4.0",   
    "SQLAlchemy>=2.0.0",  
    "rich>=13.5.0",  
    "typer>=0.9.0",  
    "requests>=2.28.0",  
    "zhipuai>=1.0.0",  # 智谱官方API客户端  
    "prompt-toolkit>=3.0.0"  # 用于交互式命令行界面  
]  
requires-python = ">=3.9"  
readme = "README.md"  
license = {text = "MIT"}  

[project.scripts]  
personalkb = "personal_kb.server:main"  
personalkb-chat = "personal_kb.chat_app:main"  

[tool.setuptools]  
packages = ["personal_kb"]  