[build-system]  
requires = ["setuptools>=61.0", "wheel"]  
build-backend = "setuptools.build_meta"  

[project]  
name = "personal-kb-mcp"  
version = "0.1.0"  
description = "A personal knowledge base with MCP integration for Zhipu AI"  
authors = [  
    {name = "Your Name", email = "your.email@example.com"},  
]  
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "openai>=1.76.0",
    "pydantic>=2.5.0",
    "mcp>=1.6.0",
    "fastmcp>=0.4.0",
    "SQLAlchemy>=2.0.0",
    "rich>=13.5.0",
    "typer>=0.9.0",
    "requests>=2.28.0",
    "zhipuai>=2.1.5",
    "prompt-toolkit>=3.0.0",
]  
requires-python = ">=3.10"  
readme = "README.md"  
license = {text = "MIT"}  

[project.scripts]  
personalkb = "personal_kb.server:main"  
personalkb-chat = "personal_kb.chat_app:main"  
personalkb-cli = "personal_kb.cli:main"  

[tool.setuptools]  
packages = ["personal_kb"]  
